--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="carouselExampleSlidesonly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/images/banner/b1.jpg" class="d-block w-100" alt="banner image">
+        <img src="images/banner/b1.jpg" class="d-block w-100" alt="banner image">
       </div>
       <div class="carousel-item">
         <img src="/images/banner/b2.jpg" class="d-block w-100" alt="banner image">
